Manifold Json and Javascript changes - Add fromSource() method for JSON/YAML types to enable quick usage of by-example JSON/YAML resource data e.g., Person person = Person.fromSource(); // Use the data in Preson.json directly and type-safely from the inferred type - Enable JSON/YAML fragments e.g, as type-safe embedded comments, use fromSource() to gain type-safe access to data - Bit of cleanup/refactoring for Javascript manifold code generation